added login with google

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
         <ul id="nav-auth" class="nav-menu">
-            <a href="landing.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
@@ -133,7 +133,7 @@
         </ul>
     
         <ul id="nav-user" class="nav-menu" style="display: none;">
-            <a href="landing.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
@@ -455,7 +455,7 @@
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
-</html><!DOCTYPE html>
+<!-- </html><!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -464,9 +464,9 @@
     <title>EduSphere</title>
     <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="footer.css">
-    <style>
-        /* Additional styles for username area */
-        .username-btn {
+    <style> -->
+        <!-- /* Additional styles for username area */ -->
+        <!-- .username-btn {
             background-color: #15803d;
             color: white;
             border: none;
@@ -778,7 +778,7 @@
         </div>
     </footer>
 
-    
+     -->
 
 <script>
 document.addEventListener("DOMContentLoaded", async function () {
