--- a/sign.html
+++ b/sign.html
@@ -44,6 +44,12 @@
                     </div>
                     <button type="submit" class="primary-btn">Sign Up</button>
                 </form>
+                <div class="separator">Or</div>
+                <div class="social-login">
+                  <a href="#" id="google-sign-in-btn">
+                    <img src="Google__G__logo.svg.png" alt="Google Logo"> Sign in with Google
+                  </a>
+                </div>
                 <div class="links">
                     <a href="javascript:void(0);" id="toggle-auth">Create an Account</a>
                 </div>
