--- a/groupPage.html
+++ b/groupPage.html
@@ -253,6 +253,144 @@
             display: none;
             z-index: 1000;
         }
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+                height: auto;
+            }
+            .sidebar {
+                width: 100%;
+                padding: 20px;
+                box-shadow: none;
+                border-right: none;
+                border-bottom: 1px solid rgba(22, 163, 74, 0.1);
+            }
+            .sidebar button {
+                padding: 12px;
+                font-size: 14px;
+            }
+            .main-content {
+                padding: 20px;
+            }
+            .group-list {
+                grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+                gap: 16px;
+            }
+        }
+        @media (max-width: 480px) {
+            .sidebar h2 {
+                font-size: 24px;
+            }
+            .sidebar input[type="text"] {
+                padding: 12px;
+                font-size: 14px;
+                margin-bottom: 16px;
+            }
+            .sidebar button {
+                padding: 10px;
+                font-size: 12px;
+            }
+            .sidebar h3 {
+                font-size: 16px;
+                margin: 16px 0 12px;
+            }
+            .sidebar label {
+                font-size: 14px;
+                padding: 6px 10px;
+            }
+            .sidebar input[type="radio"] {
+                width: 18px;
+                height: 18px;
+            }
+            .main-content h2 {
+                font-size: 30px;
+                margin-bottom: 24px;
+            }
+            .group-card {
+                padding: 24px;
+                gap: 16px;
+            }
+            .group-card h3 {
+                font-size: 20px;
+            }
+            .group-card p {
+                font-size: 14px;
+            }
+            .group-card button {
+                padding: 12px 20px;
+                font-size: 14px;
+            }
+            .footer {
+                padding: 24px;
+                font-size: 12px;
+            }
+            .popup {
+                top: 10px;
+                right: 10px;
+                padding: 12px;
+                font-size: 12px;
+            }
+        }
+        .sidebar button {
+    background: linear-gradient(135deg, #16a34a 0%, #15803d 100%);
+    color: white;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 16px;
+    font-weight: 600;
+    font-size: 16px;
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 28px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(22, 163, 74, 0.15),
+                0 10px 20px rgba(22, 163, 74, 0.1);
+}
+.sidebar button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(22, 163, 74, 0.2),
+                0 12px 24px rgba(22, 163, 74, 0.15);
+}
+.sidebar button:active {
+    transform: translateY(0);
+    box-shadow: 0 2px 4px rgba(22, 163, 74, 0.1);
+}
+
+.popup {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: #15803d;
+    color: white;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    display: none;
+    z-index: 1000;
+}
+
+@media (max-width: 768px) {
+    .sidebar button {
+        padding: 12px;
+        font-size: 14px;
+        
+    }
+}
+
+@media (max-width: 480px) {
+    .sidebar button {
+        padding: 10px;
+        font-size: 12px;
+        width: 320px;
+    }
+    .popup {
+        top: 10px;
+        right: 10px;
+        padding: 12px;
+        font-size: 12px;
+        margin-right: 40px;
+    }
+}
     </style>
 </head>
 <iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; border-radius:10px; z-index: 1001;"></iframe>
