changed name to edusphere chat

--- a/chat/public/index.html
+++ b/chat/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Chat</title>
+    <title>EduSphere- Chat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/lucide-css/dist/lucide.css" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -12,7 +12,7 @@
     <div id="welcome-screen">
         <div class="welcome-container">
             <i data-lucide="message-circle" class="welcome-icon"></i>
-            <h1>Welcome to Modern Chat</h1>
+            <h1>Welcome to EduSphere-Chat</h1>
             <div class="input-group">
                 <i data-lucide="user"></i>
                 <input type="text" id="nickname" placeholder="Enter your nickname">
