updated library path

--- a/dashboard.html
+++ b/dashboard.html
@@ -91,7 +91,7 @@
                     </div>
                     <h3>Library</h3>
                     <p>Access a vast collection of study materials and resources</p>
-                    <a href="library.html" class="card-link">Browse Library</a>
+                    <a href="ai summarize\library.html" class="card-link">Browse Library</a>
                 </div>
 
                 <div class="dashboard-card" data-card="programming">
