--- a/group-details.html
+++ b/group-details.html
@@ -102,7 +102,7 @@
             <a href="groupPage.html">
                 <li>Group Study</li>
             </a>
-            <a href="library.html">
+            <a href="ai summarize\library.html">
                 <li>Library</li>
             </a>
             <a href="quiz.html">
@@ -122,7 +122,7 @@
             <a href="groupPage.html">
                 <li>Group Study</li>
             </a>
-            <a href="library.html">
+            <a href="ai summarize\library.html">
                 <li>Library</li>
             </a>
             <a href="quiz.html">
