--- a/groupPage.html
+++ b/groupPage.html
@@ -560,7 +560,7 @@
             <a href="groupPage.html">
                 <li>Group Study</li>
             </a>
-            <a href="library.html">
+            <a href="ai summarize\library.html">
                 <li>Library</li>
             </a>
             <a href="aiquiz.html">
@@ -580,7 +580,7 @@
             <a href="groupPage.html">
                 <li>Group Study</li>
             </a>
-            <a href="library.html">
+            <a href="ai summarize\library.html">
                 <li>Library</li>
             </a>
             <a href="aiquiz.html">
