--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
         <ul id="nav-auth" class="nav-menu">
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
-            <a href="library.html"><li>Library</li></a>
+            <a href="ai summarize\library.html"><li>Library</li></a>
             <a href="aiquiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
             <a href="sign.html" id="auth-link"><li><button class="login-btn">Login</button></li></a>
@@ -35,7 +35,7 @@
         <ul id="nav-user" class="nav-menu" style="display: none;">
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
-            <a href="library.html"><li>Library</li></a>
+            <a href="ai summarize\library.html"><li>Library</li></a>
             <a href="aiquiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
             <li class="dropdown">
