--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
         <ul id="nav-auth" class="nav-menu">
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
-            <a href="library.html"><li>Library</li></a>
+            <a href="ai summarize\library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
             <a href="sign.html" id="auth-link"><li><button class="login-btn">Login</button></li></a>
@@ -22,7 +22,7 @@
         <ul id="nav-user" class="nav-menu" style="display: none;">
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
-            <a href="library.html"><li>Library</li></a>
+            <a href="ai summarize\library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
             <li class="dropdown">
