--- a/video-call-app/public/video-call.html
+++ b/video-call-app/public/video-call.html
@@ -316,7 +316,7 @@
             <a href="../groupPage.html">
                 <li>Group Study</li>
             </a>
-            <a href="../library.html">
+            <a href="../ai summarize\library.html">
                 <li>Library</li>
             </a>
             <a href="../quiz.html">
