--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@ document.addEventListener("DOMContentLoaded", async function () {
 
         if (storedToken) {
             try {
-                const response = await fetch("https://edusphere-c0wr.onrender.com/profile", {
+                const response = await fetch("https://edusphere-4-b7uo.onrender.com/index", {
                     method: "GET",
                     headers: { "Authorization": `Bearer ${storedToken}` }
                 });
