--- a/sign.html
+++ b/sign.html
@@ -118,7 +118,7 @@
     <script src="navbar.js"></script>
     <script>
         document.getElementById("google-login-btn").addEventListener("click", function () {
-    window.location.href = "https://edusphere-c0wr.onrender.com/auth/google";
+    window.location.href = "https://edusphere-4-b7uo.onrender.com/auth/google";
 });
 
 // Handle user data after Google Login
